ci fix